Changing counterfactual label to green, fixing number alignment

--- a/src/components/views/PolicyModel/PolicyPlot/InspectDayCursor/InspectDayCursor.module.scss
+++ b/src/components/views/PolicyModel/PolicyPlot/InspectDayCursor/InspectDayCursor.module.scss
@@ -128,13 +128,24 @@ $margin: 20px;
       }
 
       .number {
-        font-size: 1.75em;
+        font-size: 2em;
         font-weight: 600;
+        padding-top: 4px;
       }
 
       .label {
         margin-left: 5px;
         font-size: 0.8em;
+        line-height: 0.7rem;
+      }
+    }
+
+    .reduction,
+    .reductionContent {
+      color: #3c8c7c;
+
+      h2 {
+        color: #3c8c7c;
       }
     }
   }
